# mlops-project

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: data_loader.py  preprocessing.py  train.py
